--- a/InplayBet.Web/Styles/style.css
+++ b/InplayBet.Web/Styles/style.css
@@ -132,7 +132,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 .mp-block .yellow-box {width:98%; padding:1%; margin:1% 0 0 0; float:left; background:#ffe400;}
 .mp-block .yellow-box .scroll {width:1129px;overflow-y:hidden;overflow-x:scroll;}
 .mp-block .yellow-box .outer {width:1000%;}
-.mp-block .yellow-box p {margin:0 2% 0 0; padding:0; display:inline; float:left; width:auto; font-size:22px; color:#000; text-align:left; line-height:30px;}
+.mp-block .yellow-box p {margin:0 2% 0 0; padding:0; display:inline; float:left; width:auto; color:#000; text-align:left; line-height:30px;}
 
 .mp-block .red-box {width:98%; padding:1%; float:left; margin:1% 0 0 0; background:#ff0000;}
 .mp-block .red-box .no-scroll {width:100%; margin:25px 0 0 0;} 
@@ -251,7 +251,7 @@ ul.search-filter li a:hover {text-decoration:none; color:#63b222; background:#63
 ul.popup {margin:0; padding:0;}
 ul.popup li {margin:2px 0; padding:0; list-style:none; width:100%; float:left;}
 ul.popup li p{float:none !important;}
-ul.popup li label {float:left; width:30%; font-size:16px; margin:5px 0 0 0; padding:0;color:#000}
+ul.popup li label {float:left; width:30%; font-size:16px !important; margin:5px 0 0 0; padding:0;color:#000}
 ul.popup li label.vs {width:20px; padding:0 5px;}
 ul.popup li label.right {width:50%;}
 
@@ -315,11 +315,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#545455', end
 .data_loading{position:fixed;display:none;padding:5px;width:80px;height:80px;text-align:center;z-index:100000;background-color:#e7e7e7;border-radius:5px}
 .data_loading .loading-image{width:80px;height:60px;background:url(images/loadingAnimation.GIF) center no-repeat;float:left;display:block}
 .data_loading .loading-text{width:80px;height:20px;background:url(images/loading-text.GIF) center no-repeat;float:left;display:block}
-.loading-overlay{position:fixed;height:100%;width:100%;background-color:#e7e7e7;z-index:9999}
+.loading-overlay{position:fixed;height:100%;width:100%;background-color:#e7e7e7;z-index:1001;}
 .loading-overlay img{display:block;margin:0 auto;max-height:100%;max-width:100%;top: 50%;position: absolute; left: 50%;}
 /*------------------------- Popup CSS End---------------------------------*/
 .follow-link {display:block;float:left;width:26px;height:29px;background-repeat:no-repeat;}
-.follow-count{display: block;float: right;background: #1BB539;padding: 1px 8px;border: 1px solid #02891D;border-radius: 7px;color: #fff;font-style: normal;}
+.follow-count{cursor:pointer; display: block;float: right;background: #1BB539;padding: 1px 8px;border: 1px solid #02891D;border-radius: 7px;color: #fff;font-style: normal;}
 .ui-autocomplete {position: absolute;cursor: default;height: 150px;overflow-y: scroll;overflow-x: hidden;-webkit-overflow-scrolling: touch;}
 .yellow-box .popup-border {border:2px solid #d4be00; width:526px; margin-right:10px; min-height:320px;}
 ul.popup li input[type="submit"] {float:left; margin:0 10px 0 0;}
@@ -341,6 +341,7 @@ ul.popup li input[type="submit"] {float:left; margin:0 10px 0 0;}
 .cropcontainer .action input[type="button"] {margin-left:3px !important;}
 .mp-block .top .name-block a {text-decoration:none; color:#63b222;}
 .mp-block .top .name-block a:hover {text-decoration:underline; color:#000;}
+
  
  ul.popup li .left-input input[type="text"] {width:89%;}
  ul.leadbroad-block li .block-top .points p.right a {text-decoration:none; color:#0099FF;}
@@ -400,9 +401,31 @@ body#index .main-mobile-menu ul{padding:13px 20px 10px 20px;}
 .main-mobile-menu .open-mobile-2.mobile-close-2.mobile-close-2-2{background:url(http://www.privatelyurs.com/skin/frontend/privately/default/img/open-mobile-2.png) 50%  50%  no-repeat;}
 .main-mobile-menu .open-mobile-2.mobile-close-2-2.mobile-close-3{background:url(http://www.privatelyurs.com/skin/frontend/privately/default/img/close-mobile-2.png) 50%  50%  no-repeat;!important}
 .main-mobile-menu ul li:first-child span.open-mobile-2 {display:none;}
-.grid_24{display:none; position:absolute; width:60%; z-index:10000;}
+.grid_24{display:none; position:absolute; width:60%; z-index:2;}
 
 /*------------------------ Menu End ----------------------------*/
+
+
+.loading-overlay img {
+  display: block;
+  margin: 0 auto;
+  max-height: 100%;
+  max-width: 100%;
+  top: 45%; <--- Changed
+  position: absolute;
+  left: 43%; <--- Changed
+}
+
+.input-full-outer a.btn {top:1px !important; right:-40px !important;}
+
+ul.challenger-popup {margin:0; padding:0;}
+ul.challenger-popup li {border-bottom:1px solid #CCC; list-style:none; float:left; width:100%;}
+ul.challenger-popup li .ch-img {float:left; width:11%; margin:0 10px 10px 0;}
+ul.challenger-popup li .ch-img img {width:100%;}
+ul.challenger-popup li p {color:#6a6a6a; float:right; width:85%;}
+ul.challenger-popup li p a {color:#6a6a6a; text-decoration:none;}
+ul.challenger-popup li p a:hover {color:#63b222; text-decoration:none;}
+ul.challenger-popup li.last {border-bottom:0; margin-bottom:0;}
 
 
 
@@ -583,6 +606,13 @@ ul.leadbroad-block li .block-top .points p.left {font-size:20px;}
 .mp-block .blk-bg h3.blk-heading {font-size:30px; line-height:30px;}
 ul.popup li label {width:100%; margin:5px 0;}
 .mp-block .yellow-box .scroll {width:100%;}
+
+.mp-block .red-box .scroll {width:100%;}
+.mp-block .green-box .outer {width:95%;}
+.mp-block .red-box .outer {width:94%;}
+.red-box .popup-border {width:98%;}
+.green-box .popup-border {width:98%;}
+ul.popup li label {font-size:14px !important;}
 	
 	
 	
@@ -595,12 +625,12 @@ ul.popup li label {width:100%; margin:5px 0;}
 	
 .center {width:90%;}
 
-.header-top .right {float:left; width:100%; text-align:left;}
+.header-top .right {float:left !important; width:100% !important; text-align:left !important;}
 .header-img {margin:2% 0 0 0; width:100%;}
 .logo {text-align:center; float:none;}
-.right div:first-child {width:80%; margin-bottom:7px;}
+.right div:first-child {width:100% !important; margin-bottom:7px;}
 .right div:nth-child(4) {width:30%;}
-.right div {width:80%;}
+.right div {width:100% !important;}
 .grid_24{display:block; width:90%;}
 .nav-container ul.nav {display:none;}
 .nav-container {height:50px;}
@@ -652,8 +682,32 @@ ul.query-list li input[type="text"] {width:95%;}
 ul.popup li label {width:100%; margin:5px 0;}
 .mp-block .yellow-box .scroll {width:100%;}
 
+.mp-block .red-box .scroll {width:100%;}
+.mp-block .green-box .outer {width:95%;}
+.mp-block .red-box .outer {width:94%;}
+.red-box .popup-border {width:95%;}
+.green-box .popup-border {width:95%;} 
+ul.popup li label {font-size:14px !important;}
 
-	
+.modal-container {width:90% !important;}
+.header-top .right input[type="text"] {width:95% !important;}
+.header-top .right input[type="password"] {width:95% !important;}
+
+.btn {padding:0 6px !important;}
+.cropcontainer .action input#uploadFile {width:75px !important;}
+.cropcontainer .action input {padding:8px 4px !important;}
+.cropcontainer .action input#btnCrop {width:58px !important;}
+.cropcontainer .action input#btnZoomIn {width:28px !important;}
+.cropcontainer .action input#btnZoomOut {width:28px !important;}
+
+
+.left-input {width:34%;}
+.yellow-box .popup-border {width:91%; margin-right:0;}
+.mp-block .yellow-box .outer {width:100%;}
+.input-full-outer {width:87%;}
+
+
+
 	
 	
 }
