--- a/InplayBet.Web/Views/Bet/ShowChallengeStatusMessage.cshtml
+++ b/InplayBet.Web/Views/Bet/ShowChallengeStatusMessage.cshtml
@@ -7,11 +7,11 @@
     <div style="width:70%; float:left;display:block;">
         @if ((string)ViewBag.Status == StatusCode.Won.ToString())
         {
-            <span style="font-size: 15px;">Congratulation! You have won the challenge. Please proceed to the next challenge.</span>
+            <span style="font-size: 15px; float:left;">Congratulation! You have won the challenge. Please proceed to the next challenge.</span>
         }
         else
         {
-            <span style="font-size: 15px;">Sorry! You lost the challenge. Please proceed to the next challenge.</span>
+            <span style="font-size: 15px; float:left;">Sorry! You lost the challenge. Please proceed to the next challenge.</span>
         }
         <div style="  float: left; margin-top: 11px;">
             <a style="background: #63b222;display:block;padding:4px 14px; text-decoration:none;font-weight:bold;color:#fff;" href="javascript:window.location.reload();">Proceed</a>
