--- a/InplayBet.Web/Views/Shared/_Layout.cshtml
+++ b/InplayBet.Web/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
     <script type="text/javascript" src='@Url.Action("AppConfigData", "Base")'></script>
 </head>
 <body>
+    @Html.Partial("_SimpleMessage")
     <div class="loading-overlay">
         <img src="@Url.Content("~/Styles/Images/loadingAnimation.gif")" alt="Loading ..." />
     </div>
