--- a/InplayBet.Web/Views/MemberProfile/Index.cshtml
+++ b/InplayBet.Web/Views/MemberProfile/Index.cshtml
@@ -23,18 +23,31 @@
                     <p class="join">Ranking: @Model.Rank</p>
                     <p class="bookmarker">Bookmarker - @Model.BookMakerName.ToString()</p>
                     <p class="bookmarker">Consecutive Bet Wins: @ViewBag.ConsicutiveWonBets</p>
-                    <p class="bookmarker">Followers: <i class="follow-count" id="counter">@Model.Followers</i></p>
+                    <p class="bookmarker">Followers: <i class="follow-count" id="counter" onclick="ShowFollowingUsers(this, event, @Model.UserKey, @Model.Followers)">@Model.Followers</i></p>
                     @if (Model.UserKey == loggedInUser)
                     {
                         @Html.ActionLink("Edit Profile", "Update", "RegisterUser", new { userKey = Model.UserKey }, null)
                     }
 
-                    @if (follow > 0)
+                    @if (loggedInUser == 0)
                     {
-                        <p>
-                            <a href="javascript:void()" class="follow-link" data-status="@follow"
+                        <p class="bookmarker">
+                            <a href="javascript:void(0)" class="follow-link" title="Follow the user"
+                               style="background-image:url('@Url.Content("~/Styles/images/thumb-up-32.png")')"
+                               onclick="ShowSignupMessage(this, event)"></a>
+                        </p>
+                    }
+                    else if (follow > 0)
+                    {
+                        <p class="bookmarker">
+                            <a href="javascript:void(0)" class="follow-link" data-status="@follow"
                                onclick="Follow(this, event, @loggedInUser, @Model.UserKey, '#counter')"></a>
                         </p>
+                    }
+
+                    @if (loggedInUser != 0)
+                    {
+                        @Html.ActionLink("Reset Account", "ResetAccount", "MemberProfile", new { userKey = Model.UserKey }, null)
                     }
                 </div>
                 <div class="detail-block member-profile">
